# ai_bot_framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/publish/: SKILL.md
.claude/skills/publish/scripts/: publish.sh
ai_framework/: __init__.py  application.py  infrastructure_factory.py  tool_loop.py
ai_framework/entities/: __init__.py  ai_response.py  message.py  provider.py  token_usage.py  tool.py  tool_context.py
ai_framework/memory/: in_memory_store.py  postgres_memory_store.py
ai_framework/migrations/sql/: 0001.initial-schema.sql
ai_framework/protocols/: __init__.py  base_tool.py  i_ai_provider.py  i_memory_store.py  i_session_store.py  i_tool_registry.py
ai_framework/providers/: __init__.py  anthropic_provider.py  claude_sdk_provider.py  provider_factory.py
ai_framework/session/: __init__.py  in_memory_session_store.py  postgres_session_store.py
ai_framework/tools/: __init__.py  tool_registry.py  tool_registry_factory.py
docs/: application.md  architecture.md  installation.md  providers.md  tools.md
src/ai_framework/: __init__.py  application.py
src/ai_framework/entities/: __init__.py  session.py
src/ai_framework/integrations/: __init__.py  bot_framework.py
src/ai_framework/memory/: __init__.py  redis_memory_store.py
src/ai_framework/migrations/: __init__.py  runner.py
src/ai_framework/migrations/sql/: 0001.initial-schema.rollback.sql
src/ai_framework/protocols/: __init__.py  i_ai_provider.py  i_session_store.py  i_tool_registry.py  tool_definition.py
src/ai_framework/providers/: __init__.py  anthropic_provider.py  claude_sdk_provider.py
src/ai_framework/session/: redis_session_store.py
src/ai_framework/tools/: __init__.py  decorators.py  tool_registry.py
tests/: test_claude_sdk_provider.py  test_trim_history.py
todos/: 001-init-ai-framework.yaml  002-ai-provider-protocol.yaml  003-http-rest-transport.yaml  004-claude-agent-sdk-transport.yaml  005-tool-system.yaml  006-memory-context.yaml  007-ai-application.yaml  008-bot-framework-integration.yaml  009-fix-tool-call-id.yaml  010-import-linter-layers.yaml  011-claude-sdk-prompt-history.yaml  012-simplify-public-api.yaml
